Add Laravel Debugbar and IDE Helper

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "nesbot/carbon": "^3.8"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.14",
+        "barryvdh/laravel-ide-helper": "^3.1",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
